# chip_imu_driver

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/chip_imu_driver/: imu_serial.h
launch/: default_imu.rviz  example.launch  example_rviz.launch
src/: chip_imu_driver_node.cpp  imu_serial.cpp
